--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b2a47d">  <td>21/11/12 15:46:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterPageTest.registerPageSetUp()[pri:0, instance:com.qa.hubspot.tests.RegisterPageTest@50313382]">&gt;&gt;registerPageSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@62343880</td>   <td></td> </tr>
-<tr bgcolor="6d84ad">  <td>21/11/12 15:46:03</td>   <td>-8710</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.hubspot.tests.RegisterPageTest@50313382]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@62343880</td>   <td></td> </tr>
-<tr bgcolor="6d84ad">  <td>21/11/12 15:46:20</td>   <td>8309</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.RegisterPageTest@50313382]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@62343880</td>   <td></td> </tr>
-<tr bgcolor="b2a47d">  <td>21/11/12 15:46:14</td>   <td>2251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterPageTest.userRegistrationTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.hubspot.tests.RegisterPageTest@50313382]">userRegistrationTest</td> 
-  <td>main@62343880</td>   <td></td> </tr>
-<tr bgcolor="b2a47d">  <td>21/11/12 15:46:16</td>   <td>4942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterPageTest.userRegistrationTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.hubspot.tests.RegisterPageTest@50313382]">userRegistrationTest</td> 
-  <td>main@62343880</td>   <td></td> </tr>
-<tr bgcolor="b2a47d">  <td>21/11/12 15:46:18</td>   <td>6488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterPageTest.userRegistrationTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.hubspot.tests.RegisterPageTest@50313382]">userRegistrationTest</td> 
-  <td>main@62343880</td>   <td></td> </tr>
-<tr bgcolor="b2a47d">  <td>21/11/12 15:46:19</td>   <td>7479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterPageTest.userRegistrationTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.hubspot.tests.RegisterPageTest@50313382]">userRegistrationTest</td> 
-  <td>main@62343880</td>   <td></td> </tr>
+<tr bgcolor="97a9a2">  <td>21/11/26 09:39:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.qa.hubspot.tests.LoginPageTest@7435a578]">loginTest</td> 
+  <td>main@985679444</td>   <td></td> </tr>
+<tr bgcolor="96b4a7">  <td>21/11/26 09:38:57</td>   <td>-13115</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@7435a578]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@985679444</td>   <td></td> </tr>
+<tr bgcolor="96b4a7">  <td>21/11/26 09:39:19</td>   <td>9016</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@7435a578]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@985679444</td>   <td></td> </tr>
+<tr bgcolor="97a9a2">  <td>21/11/26 09:39:07</td>   <td>-2964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyForgorPasswordLinkTest()[pri:2, instance:com.qa.hubspot.tests.LoginPageTest@7435a578]">verifyForgorPasswordLinkTest</td> 
+  <td>main@985679444</td>   <td></td> </tr>
+<tr bgcolor="97a9a2">  <td>21/11/26 09:39:05</td>   <td>-4678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:1, instance:com.qa.hubspot.tests.LoginPageTest@7435a578]">verifyLoginPageTitleTest</td> 
+  <td>main@985679444</td>   <td></td> </tr>
 </table>
